cmake_minimum_required(VERSION 3.26)
project(Contenedores-Dinamicos)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ejercicio_1 "Ejercicio 1/main.cpp")

add_executable(Ejercicio_2 "Ejercicio 2/main.cpp")

add_executable(Ejercicio_3
        "Ejercicio 3/main.cpp")
add_executable(Ejercicio_4
        "Ejercicio 4/main.cpp")
add_executable(Ejercicio_5
        "Ejercicio 5/main.cpp")
add_executable(Ejercicio_6
        "Ejercicio 6/main.cpp"
        "Ejercicio 6/lexical_cast.hpp")
